--- a/src/app/components/mi_componente/mi-componente.component.html
+++ b/src/app/components/mi_componente/mi-componente.component.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Title</title>
 </head>
 <body>
-$END$
+<h1>{{titulo}}</h1>
+<h1>{{comentario}}</h1>
+<h1>{{year}}</h1>
+<h1> Hola Mundo mi primer componente</h1>
+<p> este es mi primer componente</p>
 </body>
 </html>
