agregando componente heroe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -330,6 +330,8 @@
   <mi-componente></mi-componente>
   <app-peliculas></app-peliculas>
   <app-prueba></app-prueba>
+  <hr>
+  <app-heroe></app-heroe>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
